# zed-leetcode

./: Cargo.toml  README.md  extension.toml  shrimp-rules.md
.github/: copilot-instructions.md
.shrimp/: WebGUI.md  tasks.json
docs/: developer-guide.md  troubleshooting.md  user-guide.md
src/: api.rs  auth.rs  commands.rs  file_manager.rs  lib.rs  models.rs  templates.rs
tests/: integration_tests.rs
