[package]
name = "zed-leetcode"
version = "0.1.0"
edition = "2024"

[lib]
name = "zed_leetcode"
crate-type = ["cdylib", "rlib"]

[dependencies]
zed_extension_api = "0.1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.0"
